# INFOH410-Project

./: Algorithm.py  GUI.py  README.md  main.ipynb  main.py  pyproject.toml
TSP/: Algorithm.py  GUI.py
datasets/: 5_nodes.txt
