[tool.poetry]
name = "INFOH410-Project"
version = "0.1.0"
description = ""
authors = ["Ken <ken@kenh.fr>"]


[tool.poetry.dependencies]
python = ">=3.7"
matplotlib = ">=3"
networkx = ">=2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
